--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data Source=dating.db"
-  }
+  },
+  "TokenKey": "super secret super secret key that is at least 64 characters long"
 }
